change scrollbar style and fixed toc displaying when it is too long.

--- a/source/css/_partial/toc.styl
+++ b/source/css/_partial/toc.styl
@@ -1,19 +1,14 @@
 //toc
 .toc-article
   background color-background
-  margin 1.6em 0 0 2em
+  margin 1.6em 0 1.6em 2em
   -webkit-border-radius 4px
   border-radius 4px
-  border 1px solid #ddd
-  -webkit-box-shadow inset  4px  4px 8px -8px #696868, 
-                        inset  -4px -4px 8px -8px #696868
-  -moz-box-shadow inset  4px  4px 8px -8px #696868, 
-                        inset  -4px -4px 8px -8px #696868
-  box-shadow inset  4px  4px 8px -8px #696868, 
-                        inset  -4px -4px 8px -8px #696868
   h2, ol
-    padding 0.3em
+    padding 0 0.4em
     margin 0
+  h2
+    cursor pointer
   ul li
     list-style disc
     text-align match-parent
@@ -30,6 +25,8 @@
 #toc
   line-height 1.3em
   font-size 0.8em
+  max-height: 68%
+  overflow: auto
   float right
   .toc
     li
@@ -46,7 +43,6 @@
   position fixed
   right 2%
   top 360px
-  overflow hidden
   line-height 1.5em
   font-size 1em
   color color-heading
